--- a/hw1/q4/Makefile
+++ b/hw1/q4/Makefile
@@ -6,7 +6,7 @@ CFLAGS = -Wall
 TARGET = q4.bin
 
 # Source files
-SRCS = q4.c
+SRCS = src/q4.c
 
 # Object files
 OBJS = $(SRCS:.c=.o)
@@ -19,7 +19,7 @@ $(TARGET): $(OBJS)
 	$(CC) $(OBJS) -o $(TARGET)
 
 # Compile the source files into object files
-%.o: %.c q4.h
+%.o: %.c src/q4.h
 	$(CC) $(CFLAGS) -c $< -o $@
 
 # Clean up object files and executable
